--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+  --border-color: black;
+  --primary:#D9D9D9;
+  --border-default: rgb(233,233,233);
+  --box-shadow: box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -24,10 +26,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -36,7 +36,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  /* border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -44,7 +44,14 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s; */
+  border-radius: 4px;
+  border: 1px solid var(--border-color);
+  background-color: var(--border-default);
+  width: max-content;
+  padding: 0.6em 1.2em;
+  font-weight: 500;
+  transition: border-color 0.25s; 
 }
 button:hover {
   border-color: #646cff;
@@ -53,7 +60,36 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+li {
+  list-style-type: none;
+}
+.d-a-flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.d-b-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.d-c-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.d-e-flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+.hide {
+  display: none;
+}
+.box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -61,8 +97,5 @@ button:focus-visible {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
