--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  --border-color: black;
+  --border-color: rgb(107,107,107);
   --primary:#D9D9D9;
   --border-default: rgb(233,233,233);
   --box-shadow: box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -31,10 +31,17 @@ body {
 }
 
 h1 {
+  font-size: 2.2em;
+  line-height: 1.1;
+}
+h2 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+h3 {
+  font-size: 1.2em;
+  line-height: 1.1;
+}
 button {
   /* border-radius: 8px;
   border: 1px solid transparent;
@@ -49,7 +56,7 @@ button {
   border: 1px solid var(--border-color);
   background-color: var(--border-default);
   width: max-content;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1.5em;
   font-weight: 500;
   transition: border-color 0.25s; 
 }
@@ -78,14 +85,38 @@ li {
   justify-content: center;
   align-items: center;
 }
+.d-s-flex {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
 .d-e-flex {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-
+.d-b-c-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.d-c-c-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.d-c-s-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
 .hide {
   display: none;
+}
+.border {
+  border:1px solid var(--border-color);
 }
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
