--- a/src/assets/css/components/Header.css
+++ b/src/assets/css/components/Header.css
@@ -1,6 +1,7 @@
 header {
   padding: 0 1%;
-  /* width: 99%; */
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.87);
 }
 header menu {
   width: 40%;
@@ -15,6 +16,6 @@ header menu li:first-child {
   border-radius: 5px;
 }
 header menu li:last-child button {
-  color: #fff;
-  background-color: black;
+  color: whitesmoke;
+  background-color: var(--secondary);
 }
