--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   background-color: #242424;
   --border-color: rgb(107,107,107);
   --primary:#D9D9D9;
+  --secondary: rgb(39,39,39);
   --border-default: rgb(233,233,233);
   --box-shadow: box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   font-synthesis: none;
@@ -116,7 +117,7 @@ li {
   display: none;
 }
 .border {
-  border:1px solid var(--border-color);
+  border:1px solid var(--border-default);
 }
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
