--- a/src/assets/css/components/Header.css
+++ b/src/assets/css/components/Header.css
@@ -1,7 +1,9 @@
 header {
   padding: 0 1%;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.87);
+  /* z-index: 1; */
+  background-color: var(--primary);
+  color: var(--secondary);
+  background-color: var(--secondary-accent);
 }
 header menu {
   width: 40%;
@@ -11,11 +13,15 @@ header menu li {
   margin: 0 1%;
 }
 header menu li:first-child {
-  background-color: var(--border-default);
+  background-color: var(--callout-button);
   padding: 0.5% 1%;
   border-radius: 5px;
 }
 header menu li:last-child button {
-  color: whitesmoke;
+  color: var(--primary);
   background-color: var(--secondary);
+}
+header menu .auth-btn {
+  background-color: var(--primary-accent);
+  background-color: var(--tertiary-accent);
 }
