--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,22 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-  --border-color: rgb(107,107,107);
-  --primary:#D9D9D9;
-  --secondary: rgb(39,39,39);
-  --border-default: rgb(233,233,233);
-  --box-shadow: box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  /* background-color: #242424; */
+  --primary: #fefffe;
+  --secondary: #2d2d2a;
+  --tertiary: #4c4c47;
+  --primary-accent: #d9d9d9;
+  --secondary-accent: #cfc4b1;
+  --tertiary-accent: #676127;
+  --callout-button: rgb(245, 245, 245);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+section {
+  padding: 0;
+  background-color: var(--primary);
 }
 
 a {
@@ -29,37 +35,37 @@ body {
   margin: 0;
   place-items: center;
   min-width: 320px;
+  background-color: var(--primary);
 }
 
 h1 {
-  font-size: 2.2em;
+  font-size: 4.2em;
   line-height: 1.1;
+  margin: 0;
 }
 h2 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 0;
 }
 h3 {
+  font-size: 2.2em;
+  line-height: 1.1;
+  margin: 0;
+}
+h4 {
   font-size: 1.2em;
   line-height: 1.1;
+  margin: 0;
 }
 button {
-  /* border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s; */
   border-radius: 4px;
   border: 1px solid var(--border-color);
   background-color: var(--border-default);
   width: max-content;
   padding: 0.4em 1.5em;
   font-weight: 500;
-  transition: border-color 0.25s; 
+  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
@@ -117,12 +123,12 @@ li {
   display: none;
 }
 .border {
-  border:1px solid var(--border-default);
+  border: 1px solid var(--border-default);
 }
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -130,4 +136,4 @@ li {
   a:hover {
     color: #747bff;
   }
-}
+} */
