--- a/src/assets/css/pages/Landing.css
+++ b/src/assets/css/pages/Landing.css
@@ -34,6 +34,7 @@
 .landingSection section .subSection {
   margin-left: 1%;
   color: var(--secondary);
+  color: var(--tertiary-accent);
 }
 .landingSection .quoteContainer {
   display: grid;
