--- a/src/assets/css/components/Contact.css
+++ b/src/assets/css/components/Contact.css
@@ -1,8 +1,9 @@
-main {
+.contact-container {
   /* background-color: var(--border-default); */
   /* replace with a background arieal views of different biome video loop */
   height: 100vh;
   width: auto;
+  background-color: rgb(0, 0, 0, 0);
 }
 #background-video {
   width: 100vw;
@@ -13,15 +14,26 @@ main {
   right: 0;
   top: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 0;
 }
-form {
-  background-color: white;
+.contact-container form {
   width: 25%;
   padding: 2% 0;
   border-radius: 10px;
+  z-index: 1;
+  padding: 2% 0;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: saturate(180%) blur(10px);
 }
-
+.contact-container form hgroup {
+  color: var(--primary);
+  text-align: center;
+  width: 100%;
+}
+.contact-container form hgroup h3 {
+  text-align: center;
+}
 .inputContainer label,
 .inputContainer input,
 .inputContainer textarea {
