--- a/src/assets/css/pages/Home.css
+++ b/src/assets/css/pages/Home.css
@@ -1,15 +1,19 @@
-section {
+.home-container {
   padding: 3%;
   /* display: flex; */
   flex-direction: row;
   justify-content: space-between;
 }
-section main {
+.home-container main {
   /* width: 90%; */
   flex: 1;
   margin-right: 2%;
 }
-section main h3 {
+.home-container .lg-card-containers {
+  width: 80%;
+  margin-left: 1%;
+}
+.home-container h3 {
   text-transform: uppercase;
   text-align: start;
   margin-top: 20px;
