--- a/src/assets/css/components/Card.css
+++ b/src/assets/css/components/Card.css
@@ -33,10 +33,11 @@ img {
 .card-container .header p {
   margin: 5px 0 0 0;
 }
-.card-container h3 {
+.card-container h4 {
   margin: 0;
-  padding: 10px 20px;
+  padding: 5px 20px;
   border-radius: 50px;
+  border: 1px solid var(--tertiary);
   width: min-content;
   background-color: white;
 }
