--- a/src/assets/css/pages/Home.css
+++ b/src/assets/css/pages/Home.css
@@ -3,9 +3,9 @@
   /* display: flex; */
   flex-direction: row;
   justify-content: space-between;
+  color: var(--secondary);
 }
 .home-container main {
-  /* width: 90%; */
   flex: 1;
   margin-right: 2%;
 }
