--- a/src/assets/css/components/Card.css
+++ b/src/assets/css/components/Card.css
@@ -7,6 +7,9 @@
   height: 300px;
   padding: 0 0 20px 0;
 }
+.sm-card-container {
+  width: 45%;
+}
 img {
   height: 60%;
   width: 100%;
@@ -19,7 +22,6 @@ img {
   align-items: start;
   justify-content: flex-end;
   padding: 0;
-  /* background-color: rgba(255, 255, 255); */
   position: relative;
   top: -30px;
   left: 8px;
@@ -59,7 +61,6 @@ svg {
   font-size: 20px;
 }
 .card-container .information div {
-  /* width: min-content; */
   display: flex;
   justify-content: flex-end;
 }
@@ -68,5 +69,4 @@ svg {
   white-space: nowrap;
   padding: 1% 3%;
   border-radius: 20px;
-  /* margin-bottom: 4%; */
 }
