--- a/src/assets/css/pages/Home.css
+++ b/src/assets/css/pages/Home.css
@@ -3,13 +3,18 @@
   /* display: flex; */
   flex-direction: row;
   justify-content: space-between;
+  /* flex-wrap: wrap; */
   color: var(--secondary);
 }
+
 .home-container main {
   flex: 1;
   margin-right: 2%;
 }
-.home-container .lg-card-containers {
+.home-container main p {
+  color: car(--primary-accent);
+}
+.home-container .card-containers {
   width: 80%;
   margin-left: 1%;
 }
@@ -17,4 +22,10 @@
   text-transform: uppercase;
   text-align: start;
   margin-top: 20px;
+}
+.home-container .cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
